--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,12 @@ spring.datasource.url= jdbc:mysql://localhost:3306/pigmy?createDatabaseIfNotExis
 spring.datasource.username=root
 spring.datasource.password=364133364133Xyc
 
+server.ssl.key-alias=selfsigned
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:mykeystore.jks
+server.ssl.key-store-password=pass123
+server.port=8443
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
