--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,10 @@ spring.datasource.username=root
 spring.datasource.password=364133364133Xyc
 #364133364133Xyc
 
-server.ssl.key-alias=selfsigned
+server.ssl.key-alias=purchased
 server.ssl.key-store-type=PKCS12
-server.ssl.key-store=classpath:mykeystore.jks
-server.ssl.key-store-password=pass123
+server.ssl.key-store=classpath:server.jks
+server.ssl.key-store-password=364133364133Rrock.!
 server.port=8443
 
 spring.jpa.hibernate.ddl-auto=update
