--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-cookies/cookies": "^6.2.1",
     "axios": "^1.5.1",
     "expo": "^49.0.3",
     "expo-constants": "~14.4.2",
@@ -18,9 +19,11 @@
     "expo-router": "2.0.0",
     "expo-splash-screen": "~0.20.4",
     "expo-status-bar": "~1.6.0",
+    "link": "^2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "^0.72.6",
+    "react-native-cookies": "^3.3.0",
     "react-native-dotenv": "^3.4.9",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.12.0",
