--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.22.3",
     "@react-native-community/datetimepicker": "7.2.0",
     "axios": "^1.5.1",
     "expo": "^49.0.3",
